--- a/index.html
+++ b/index.html
@@ -1,2 +1,75 @@
-戴开宇，博士，复旦大学软件学院副教授，校教学发展中心FD-QM项目组研究员，校教学督导。研究兴趣为现代教育信息科学与技术等。2020年获评复旦大学毕业生“我心目中的好老师”，2018年度入选全国首届“高校计算机专业优秀教师奖励计划”。主持教改项目20项左右。近年来作为第一负责人的主要教学获奖有：2020年获复旦大学首届教学创新大赛一等奖；2018年度中国高校计算机教育MOOC联盟优秀案例奖；2017年获复旦大学校级教学成果奖一等奖，上海市教学成果奖二等奖；2018年 获得“第二届全国高等学校计算机教育教学青年教师优秀论文奖二等奖”；2017年获超星主办的上海市首届移动教学大赛一等奖。
+---
+layout: default
+---
 
+<div id="ace-content" class="ace-container-shift">
+    <div class="ace-container">
+        <div id="ace-nav-wrap" class="hidden-sm hidden-xs">
+            <div class="ace-nav-cont">
+                <div id="ace-nav-scroll">
+                    <nav id="ace-nav" class="ace-nav">
+                        <ul class="clear-list">
+                            <li>
+                              <a href="index.html" data-tooltip="Home"><img class="avatar avatar-42" src="{{ '/styles/img/show-star.png' | prepend: site.baseurl }}" alt=""></a>
+                            </li>
+                            <li>
+                              <a href="#basic_info" data-tooltip="基本信息"><span class="ace-icon ace-icon-home"></span></a>
+                            </li>
+                            <li>
+                              <a href="#profetional" data-tooltip="职业技能"><span class="ace-icon ace-icon-experience"></span></a>
+                            </li>
+
+                            <li>
+                              <a href="#education" data-tooltip="教育经历"><span class="ace-icon ace-icon-portfolio"></span></a>
+                            </li>
+                            
+                            <li>
+                              <a href="#experience" data-tooltip="工作经历"><span class="ace-icon ace-icon-references"></span></a>
+                            </li>
+                            <li>
+                              <a href="#certification" data-tooltip="获得证书"><span class="ace-icon ace-icon-blog"></span></a>
+                            </li>
+                            <li>
+                              <a href="#personal_project" data-tooltip="个人作品"><span class="ace-icon ace-icon-snowflake-o"></span></a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+
+                <div id="ace-nav-tools" class="hidden">
+                    <span class="ace-icon ace-icon-dots-three-horizontal"></span>
+
+                    <button id="ace-nav-arrow" class="clear-btn">
+                        <span class="ace-icon ace-icon-chevron-thin-down"></span>
+                    </button>
+                </div>
+            </div>
+
+            <!-- <div class="ace-nav-btm"></div> -->
+        </div><!-- .ace-nav-wrap -->
+
+        <div class="ace-paper-stock">
+            <main class="ace-paper clearfix">
+                <div class="ace-paper-cont clear-mrg">
+                    <!-- START: PAGE CONTENT -->
+                    <div class="padd-box clear-mrg">
+
+                    {% include resumer_01-basic.html %}
+
+                    {% include resumer_02-profetional.html %}
+
+                    {% include resumer_03-education.html %}
+
+                    {% include resumer_04-experience.html %}
+
+                    {% include resumer_05-certification.html %}
+
+                    {% include resumer_06-personal_project.html %}
+                        
+                    </div><!-- .padd-box -->
+                <!-- END: PAGE CONTENT -->
+                </div><!-- .ace-paper-cont -->
+            </main><!-- .ace-paper -->
+        </div><!-- .ace-paper-stock -->
+    </div><!-- .ace-container -->
+</div><!-- #ace-content -->
